--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "kratos-boilerplate",
-  "version": "3.1.0",
-  "title": "Kratos Boilerplate",
+  "name": "webpack-boilerplate",
+  "version": "1.0.0",
+  "title": "Webpack Boilerplate",
   "description": "A simple boilerplate for creating a static PWA using Webpack, Pug, PostCSS and CSS Modules",
-  "homepage": "https://github.com/felipefialho/kratos-boilerplate",
+  "homepage": "https://github.com/r14r/template_webpack",
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "author": {
-    "name": "Felipe Fialho",
-    "email": "hi@felipefialho.com",
-    "url": "http://www.felipefialho.com"
+    "name": "Ralph Göstenmeier",
+    "email": "rg@via-internet.de",
+    "url": "http://blog.ralph-goestenmeier.de"
   },
   "scripts": {
     "start": "webpack serve --mode development",
